--- a/index.html
+++ b/index.html
@@ -3,20 +3,57 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="assets/css/style.css">
-    <link rel="scriptsheet" href="assets/js/script.js">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css">
-   
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css" integrity="sha512-SnH5WK+bZxgPHs44uWIX+LLJAJ9/2PkPKZ5QiAj6Ta86w+fsb2TkcmfRyVX3pBnMFcV7oQPJkl9QevSCWr3W6A==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <title>Login Dark/Light Mode</title>
-
-
 </head>
 <body>
     <main id="container">
-        <form id="login-form">
+        <form action="" id="login-form">
             <div id="form-header">
                 <h1>Login</h1>
-                <i class="fa fa-moon-o" aria-hidden="true"></i>
+                <i id="mode-icon" class="fa fa-moon-o" aria-hidden="true"></i>
+            </div>
+
+            <div id="social-media">
+                <a href="">
+                    <img src="assets/imgs/facebook.png" alt="logo facebook">
+                </a>
+
+                <a href="">
+                    <img src="assets/imgs/google.png" alt="logo google">
+                </a>
+
+                <a href="">
+                    <img src="assets/imgs/github.png" alt="logo github">
+                </a>
+            </div>
+
+            <div id="inputs">
+                <div class="input-box">
+                    <label for="name">
+                        Name
+                        <div id="input-field">
+                            <i class="fa fa-user" aria-hidden="true"></i>
+                            <input type="text" id="name" name="name">
+
+
+                        </div>
+                    </label>
+                </div>
+
+                <div class="input-box">
+                    <label for="name">
+                        E-mail
+                        <div id="input-field">
+                            <i class="fa fa-envelope" aria-hidden="true"></i>
+                            <input type="email" id="email" name="email">
+                        </div>
+                    </label>
+                </div>
+
+                
+                
+
             </div>
         </form>
     </main>
